{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 12,
  "lineage": "c8e83636-00a8-86d9-ae1f-3c1d5fd19678",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.95.198",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-02-11T04:24:47.759-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/kura-devops/regions/europe-west1/addresses/kura-platform-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "kura-platform-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "kura-devops",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/regions/europe-west1/addresses/kura-platform-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8000",
                  "8001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-11T04:25:09.530-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kura-devops/global/firewalls/kura-platform-allow-http",
            "log_config": [],
            "name": "kura-platform-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/networks/kura-platform-net",
            "params": [],
            "priority": 1000,
            "project": "kura-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/firewalls/kura-platform-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "kura-platform-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.kura"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-11T04:25:09.948-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kura-devops/global/firewalls/kura-platform-allow-ssh",
            "log_config": [],
            "name": "kura-platform-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/networks/kura-platform-net",
            "params": [],
            "priority": 1000,
            "project": "kura-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/firewalls/kura-platform-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "kura-platform-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.kura"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 200,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kura-devops/zones/europe-west1-b/disks/kura-platform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-11T04:25:34.436-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/kura-devops/zones/europe-west1-b/instances/kura-platform",
            "instance_id": "2361988272183430097",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:"
            },
            "metadata_fingerprint": "RNjAss84eEY=",
            "metadata_startup_script": "#!/bin/bash\nset -euxo pipefail\n\nexport DEBIAN_FRONTEND=noninteractive\n\napt-get update\napt-get install -y ca-certificates curl gnupg git apt-transport-https lsb-release\n\ninstall -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nchmod a+r /etc/apt/keyrings/docker.gpg\n\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://downlo [...]
            "name": "kura-platform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.95.198",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/networks/kura-platform-net",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kura-devops/regions/europe-west1/subnetworks/kura-platform-subnet",
                "subnetwork_project": "kura-devops",
                "vlan": 0
              }
            ],
            "project": "kura-devops",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/zones/europe-west1-b/instances/kura-platform",
            "service_account": [
              {
                "email": "kura-platform-sa@kura-devops.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kura-platform-vm"
            ],
            "tags_fingerprint": "TTgHjhH0K10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.public_ip",
            "google_compute_network.kura",
            "google_compute_subnetwork.kura",
            "google_service_account.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kura",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kura-devops/global/networks/kura-platform-net",
            "mtu": 0,
            "name": "kura-platform-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1231158159496825824",
            "numeric_id": "1231158159496825824",
            "project": "kura-devops",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/networks/kura-platform-net"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kura",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-11T04:25:09.925-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/kura-devops/regions/europe-west1/subnetworks/kura-platform-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "kura-platform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kura-devops/global/networks/kura-platform-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kura-devops",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kura-devops/regions/europe-west1/subnetworks/kura-platform-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6273223643562625994
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.kura"
          ]
        }
      ]
    }
  ]
}